--- a/res/layout/login_screen_activity.xml
+++ b/res/layout/login_screen_activity.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="120dp"
         android:ems="10"
         android:hint="@string/userName"
-        android:text="admin" />
+        android:text="patient1" />
 
     <EditText
         android:id="@+id/password"
@@ -28,7 +28,7 @@
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
-        android:text="pass" />
+        android:text="pwd_p1" />
 
     <Button
         android:id="@+id/loginButton"
