--- a/res/layout/checkin_list_item.xml
+++ b/res/layout/checkin_list_item.xml
@@ -11,8 +11,15 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
-        android:textSize="24sp"
-        android:textColor="@color/text_color" 
+        android:textSize="12sp" 
+        />
+     <TextView
+        android:id="@+id/painLevel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:textSize="12sp" 
         />
 
 </LinearLayout>
