--- a/res/layout/login_screen_activity.xml
+++ b/res/layout/login_screen_activity.xml
@@ -8,6 +8,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".LoginScreenActivity" >
 
+     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:text="@string/login_as" />
+    
+    <Spinner
+        android:id="@+id/spinnerUsers"
+        android:layout_width="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content" />
     <EditText
         android:id="@+id/userName"
         android:layout_width="wrap_content"
@@ -17,7 +28,7 @@
         android:layout_marginTop="120dp"
         android:ems="10"
         android:hint="@string/userName"
-        android:text="patient1" />
+        android:text="doctor1" />
 
     <EditText
         android:id="@+id/password"
@@ -28,7 +39,7 @@
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
-        android:text="pwd_p1" />
+        android:text="pwd_d1" />
 
     <Button
         android:id="@+id/loginButton"
@@ -39,18 +50,6 @@
         android:layout_marginTop="35dp"
         android:text="@string/login" />
 
-    <EditText
-        android:id="@+id/server"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/userName"
-        android:layout_alignLeft="@+id/userName"
-        android:layout_marginBottom="58dp"
-        android:ems="10"
-        android:hint="@string/server"
-        android:text="@string/localhost" >
-
-        <requestFocus />
-    </EditText>
+   
 
 </RelativeLayout>
