--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="disabled_text_color">#000000</color>
     <color name="default_text_color">#000000</color>
     <color name="focused_background_color">#dddddd</color>
+    <color name="background_dark">#666666</color>
+    <color name="text_light">#eeeeee</color>
 </resources>
